...
                                <nil key="highlightedColor"/>
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="iye-Fg-FwC">
                                <rect key="frame" x="20" y="315" width="374" height="32"/>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                            </segmentedControl>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PeC-lx-zxm">
                                <rect key="frame" x="0.0" y="381" width="414" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="InputText"/>
                                <color key="textColor" systemColor="systemGray2Color"/>
...
